--- a/package.json
+++ b/package.json
@@ -2,7 +2,21 @@
   "name": "new-comp",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun run src/index.ts",
+    "lint": "eslint src/**",
+    "lint:fix": "eslint src/** --fix",
+    "format": "prettier --write ."
+  },
   "devDependencies": {
-    "bun-types": "^0.4.0"
-  }
+    "bun-types": "^0.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {}
 }
