--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "prettier": "^2.8.3",
     "typescript": "^4.9.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0"
+  }
 }
