--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@types/prettier": "^2.7.2",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^7.32.0",
