chore(tsconfig): inlude files with cjs extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "**/*.cjs"
   ],
   "exclude": [
     "node_modules"
