style(prettier): run format script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,6 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "plugin:prettier/recommended"
-  ]
+  "plugins": ["@typescript-eslint"],
+  "extends": ["plugin:prettier/recommended"]
 }
