--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.cjs"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts", "**/*.cjs"],
+  "exclude": ["node_modules"]
 }
