chore(packaging): update name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-comp",
+  "name": "n-comp",
   "description": "CLI for creating new react components",
   "version": "0.0.1",
   "keywords": [
