--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint": "eslint src/**",
     "lint:fix": "eslint src/** --fix",
     "format": "prettier --write .",
+    "prebuild": "rm -rf lib/",
     "build": "tsc"
   },
   "devDependencies": {
