--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "commander": "^10.0.0"
+    "commander": "^10.0.0",
+    "prettier": "^2.8.4"
   }
 }
