--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint:fix": "eslint src/** --fix",
     "format": "prettier --write .",
     "prebuild": "rm -rf lib/",
-    "build": "tsc"
+    "build": "tsc && cp -r src/templates/ lib/"
   },
   "devDependencies": {
     "@types/prettier": "^2.7.2",
