--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "module": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
