chore(packaging): rename bin to `n-comp`

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "license": "ISC",
   "bin": {
-    "new-comp": "./lib/src/index.js"
+    "n-comp": "./lib/src/index.js"
   },
   "files": [
     "lib"
