--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "typescript": "^5.4.5"
   }
 }
