--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^9.0.0",
     "typescript": "^5.4.5"
   }
