--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/**"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
