chore(packaging): add `format` script

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "module": "src/index.ts",
   "scripts": {
     "lint": "eslint src/**",
-    "lint:fix": "eslint src/** --fix"
+    "lint:fix": "eslint src/** --fix",
+    "format": "prettier src/** --check"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
