--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "format:fix": "prettier src/** --write"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.12.7",
     "@types/prettier": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
