--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "lint": "eslint src/**",
     "lint:fix": "eslint src/** --fix",
     "format": "prettier src/** --check",
@@ -42,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.56.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
