chore(packaging): update license to `MIT`

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/codingcodax/new-comp/issues"
   },
-  "license": "ISC",
+  "license": "MIT",
   "bin": {
     "n-comp": "./lib/src/index.js"
   },
