--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.56.0",
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
