--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "format:fix": "prettier src/** --write"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
