--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.12.7",
+    "@types/react": "^18.2.78",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.56.0",
+    "react": "^18.2.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
