feat(tsconfig): add `templates` to include and add `jsx`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,14 @@
       "~/*": [
         "./src/*"
       ]
-    }
+    },
+    "jsx": "react-jsx"
   },
   "include": [
     "src",
     "**/*.ts",
     "**/*.js",
-    "**/*.mjs"
+    "**/*.mjs",
+    "templates"
   ]
 }
