--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@mui/material": "^5.15.15",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.78",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
