--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "n-comp": "./lib/index.js"
   },
   "files": [
-    "lib"
+    "lib",
+    "templates"
   ],
   "main": "src/index.ts",
   "module": "src/index.ts",
