--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "prettier": "^3.2.5"
   }
