--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   "dependencies": {
     "@prettier/sync": "^0.5.1",
     "chalk": "^4.1.2",
-    "commander": "^12.0.0",
-    "prettier": "^3.2.5"
+    "commander": "^12.0.0"
   }
 }
