--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": [
       "es2023"
     ],
+    "allowImportingTsExtensions": true,
     "module": "node16",
     "target": "es2022",
     "strict": true,
